*unreleased changes*
--------------------
* Android controls update - two virtual joysticks
* Linux installer - added a man page and menu item
* Added a basic torch
* Added a new scripting function - game.getPlayerFromSlot
* Fixed compile on MXE by bringing Lua dependency in-tree
* Fixed crashes when using Assimp 3.1.1
* Fixed compile when using an older version of FreeType
* Fixed crashes with bad arguments to --campaign and --arcade
* Fixed crashes when using a non-3D renderers

Data changes:
* Removed calls to deprecated scripting functions
* Fix zombie.dae scale
* Spawn dead players as zombies in the next round

New in 1.12
-----------
* UI scaling for Android, so everything isn't so tiny
* A few other Android tweaks and fixes
* Fixed font loading issues
* Rotate head on vertical axis
* Fix depth issues with close objects and HUD
* Implemented STATIC sound type for units
* Implemented spawn animations
* Added incomplete Brazilian Portuguese translation
* Some misc networking bugfixes
* Added Spanish translation
* Added couple of scripts for quick windows network testing
* Vehicle wheel rotations

Data changes:
* Update unit types config for additional sounds
* Lighting test data
* Remove broken unit types
* Updated 'ute' model