@@ -1,4 +1,4 @@
 title = "Chaotic Rage"
 arcade = 1
 campaign = 1
-
+menu-model = "magellan_16.dae"
